@@ -29,7 +29,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 22, 2012
+.Dd April 29, 2015
 .Dt ZIP_GET_ARCHIVE_FLAG 3
 .Os
 .Sh NAME
@@ -57,9 +57,9 @@ is set to
 the original unchanged flags are tested.
 .Pp
 Supported flags are:
-.Bl -tag -width XZIPXAFLXTORRENTXXX
-.It Dv ZIP_AFL_TORRENT
-The archive is torrent-zipped.
+.Bl -tag -width XZIPXAFLXRDONLYXXX
+.It Dv ZIP_AFL_RDONLY
+The archive is read-only.
 .El
 .Sh RETURN VALUES
 .Fn zip_get_archive_flag
