@@ -13,7 +13,3 @@ INSTALL(TARGETS zipcmp RUNTIME DESTINATION bin)
 ADD_EXECUTABLE(zipmerge zipmerge.c ${SRC_EXTRA_FILES})
 TARGET_LINK_LIBRARIES(zipmerge zip)
 INSTALL(TARGETS zipmerge RUNTIME DESTINATION bin)
-
-ADD_EXECUTABLE(ziptorrent ziptorrent.c ${SRC_EXTRA_FILES})
-TARGET_LINK_LIBRARIES(ziptorrent zip)
-INSTALL(TARGETS ziptorrent RUNTIME DESTINATION bin)
